# sam2

./: README.md  pyproject.toml  setup.py
sam2/: automatic_mask_generator.py  sam2_image_predictor.py  sam2_video_predictor.py
sam2/modeling/: sam2_base.py
sam2/utils/: amg.py  misc.py
